<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/infoAppLayout"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:background="@color/colorBackgroundTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textViewObj" />

        <TextView
            android:textSize="12sp"
            android:textColor="@color/colorDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewObj"
            android:id="@+id/textViewCreateDate" />

        <TextView
            android:textColor="@android:color/black"
            android:layout_below="@id/textViewObj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:id="@+id/textViewReason" />

        <GridLayout
            android:orientation="horizontal"
            android:rowCount="3"
            android:columnCount="4"
            android:paddingTop="10dp"
            android:columnOrderPreserved="false"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewReason">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_person_black_24dp"
                android:id="@+id/imageViewPerformer"
                android:contentDescription="@string/performer" />

            <ImageView
                android:layout_row="1"
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_event_black_24dp"
                android:id="@+id/imageViewDeadLine"
                android:contentDescription="@string/deadLine" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_row="1"
                android:paddingTop="3dp"
                android:layout_column="3"
                android:id="@+id/textViewDeadLine" />

            <ImageView
                android:layout_row="2"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="3dp"
                app:srcCompat="@drawable/ic_pulse_black_24dp"
                android:id="@+id/imageViewStatus"
                android:contentDescription="@string/status" />

            <ImageView
                android:layout_row="2"
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="3dp"
                app:srcCompat="@drawable/ic_alert_circle_black_24dp"
                android:id="@+id/imageViewPriority"
                android:contentDescription="@string/priority" />

            <TextView
                android:layout_row="2"
                android:layout_column="3"
                android:layout_marginLeft="2dp"
                android:paddingTop="3dp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/textViewPriority" />

            <TextView
                android:layout_row="2"
                android:layout_column="1"
                android:paddingTop="3dp"
                android:layout_marginLeft="2dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:id="@+id/textViewStatus" />

            <TextView
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="2dp"
                android:textColor="@android:color/black"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/textViewPerformer" />

        </GridLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:background="@android:color/darker_gray"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

    </ListView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_bottom"
        android:layout_height="?android:actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:layout_weight="0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                app:srcCompat="@drawable/ic_play_circle_outline_white_24dp"
                android:id="@+id/imageButtonStartTask"
                android:contentDescription="@string/startTask" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/imageButtonStartTask"
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/ic_check_circle_white_24dp"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/imageButtonFinishTask"
                android:contentDescription="@string/finishTask" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_replay_black_24dp"
                android:tint="@android:color/white"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/imageButtonFinishTask"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/imageButtonRenew"
                android:visibility="gone"
                android:contentDescription="@string/renew" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_report"
                android:background="?attr/selectableItemBackground"
                android:layout_toLeftOf="@+id/imageButtonAddComment"
                android:id="@+id/imageButtonAddReport"
                android:contentDescription="@string/addReport" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_comment_black_24dp"
                android:tint="@android:color/white"
                android:background="?attr/selectableItemBackground"
                android:layout_toLeftOf="@+id/imageButtonTransfer"
                android:id="@+id/imageButtonAddComment"
                android:contentDescription="@string/addComment" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/transfer_user"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/imageButtonTransfer"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/transferTask" />

        </RelativeLayout>


    </android.support.v7.widget.Toolbar>


</LinearLayout>